Fix 1px scrollbar when everything fits on screen

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -54,7 +54,7 @@ body {
     width: 100%;
     white-space: nowrap;
     /* Set the fixed height of the footer here */
-    height: 60px;
+    height: 61px;
     line-height: 60px; /* Vertically center the text there */
 }
 
